1、我的公益记录中，改为“跟”捐；共捐赠保留两位小数 2、基金介绍页面，动态显示个人与本宿捐赠比例的比值，并保留一位小数

--- a/js/pages/commonweal/intro.html
+++ b/js/pages/commonweal/intro.html
@@ -31,8 +31,8 @@
             <button class="intro-button bs-text-larger" ms-on-tap="open">马上捐赠</button>
         </div>
         <div class="bs-text-x-smaller bs-text-102">
-            以您个人名义，将推广奖励收入的{{rate}}%捐赠
-            <br> 给指定的公益组织，同时本宿将按照1.8:1的比例跟捐。
+            以您个人名义，将推广奖励收入的{{rate*100}}%捐赠
+            <br> 给指定的公益组织，同时本宿将按照{{pcRate}}:1的比例跟捐。
         </div>
         <div class="bs-text-smaller bs-text-gold" style="position: relative; bottom: -5vh;" ms-on-tap="goRecord()">
             我的公益记录
