--- a/js/pages/franchisee/index.html
+++ b/js/pages/franchisee/index.html
@@ -55,8 +55,9 @@
                 </div>
                 <div class="bs-text-larger fr-content" style="height: 46px;position: relative;top: -5vh;">
                     <div ms-visible="@isShow">
-                        <span class="bs-text-small bs-text-white">可提现金额</span>&nbsp;&nbsp;
                         <span>¥{{@withdrawCash}}</span>
+                        <br>
+                        <span class="bs-text-smaller bs-text-white">可提现金额</span>
                         <br>
                         <input type="tel" ms-duplex="@amount" data-duplex-changed="@changed1" style="width: 180px;display: block;margin-top: 30px;margin-bottom: -15px;background: #23262a;border: none;text-align: center;" onkeyup="this.value=this.value.replace(/\D/g,'')" onafterpaste="this.value=this.value.replace(/\D/g,'')" placeholder="输入提现金额" >
                         <hr style="color: #999;">
