--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -108,6 +108,14 @@ div ul li {
         </ul>
         <ul class="mui-table-view">
             <li class="mui-table-view-cell">
+                <a href="balance.html" class="mui-navigate-right">
+                    <span class="bs-text-gray nav-title">余额</span>
+                    <span style="display: inline-block;margin-top: 7px;">¥{{balance}}</span>
+                </a>
+            </li>
+        </ul>
+        <ul class="mui-table-view" style="margin-top: 5px">
+            <li class="mui-table-view-cell">
                 <a href="frequent-contact-list.html" class="mui-navigate-right">
                     <span class="bs-text-gray nav-title">入住人信息</span>
                 </a>
