增加余额明细页面 余额支持买卡 alipay页面逻辑修改，直接跳转

--- a/js/pages/card/ETF.html
+++ b/js/pages/card/ETF.html
@@ -13,7 +13,7 @@
         font-weight: bolder;
     }
 </style>
-<div class="bs-text-normal title">
+<div id="popover-text-content" class="bs-text-normal title">
     <div style="margin-top: 5vh;">
         <div class="bs-text-smaller">公司全称：</div>
         <div class="content">上海本宿网络科技有限公司</div>
