--- a/js/pages/invite/vip-invite.html
+++ b/js/pages/invite/vip-invite.html
@@ -12,8 +12,8 @@
     <div class="bs-text-small bs-text-gold" ms-on-tap="clickLog" style="margin: 20px;text-align: right;">
       邀请记录
     </div>
-    <div style="margin: 20px;">
-        <div class="bs-text-x-larger bs-text-bolder" style="    line-height: 32px;">
+    <div style="margin: 20px 0;padding: 0 20px;overflow: auto;background-color: #fff;">
+        <div class="bs-text-x-larger bs-text-bolder" style="line-height: 32px;">
             邀请好友成为本宿VIP会员，您将获得：
         </div>
         <div class="bs-text-large" style="margin: 30px 0 50px 0;line-height: 28px;">
