--- a/js/pages/order/payend.html
+++ b/js/pages/order/payend.html
@@ -24,6 +24,7 @@
                     <span ms-if="data.isPartTime">{{formatDate(el.startTime)}} {{getHourTime(el.startTime)}} - {{getHourTime(el.endTime)}} &nbsp;共 {{el.timeCount}} 小时
                     </span>
                 </span>
+                <img src="../img/icon/right-arrow.svg" style="float: right;height: 20px;width: 20px;margin-right: 10px;">
                 <br>
                 <span style=" margin-top: 8px;" ms-repeat-cl="el.orderCustomerList">{{cl.name}}&nbsp;</span>
                 <br>
