首页动态数据对接接口，增加交互

--- a/js/pages/discover/joinUs.html
+++ b/js/pages/discover/joinUs.html
@@ -34,8 +34,8 @@ body {
     <div class="swiper-wrapper">
         <div class="swiper-slide" style="background-image:url(img/discover/job_pm.jpg)">
         </div>
-        <div class="swiper-slide" style="background-image:url(img/discover/job_ui.jpg)">
-        </div>
+        <!-- <div class="swiper-slide" style="background-image:url(img/discover/job_ui.jpg)">
+        </div> -->
         <div class="swiper-slide" style="background-image:url(img/discover/job_dev.jpg)">
         </div>
         <div class="swiper-slide" style="background-image:url(img/discover/job_pd.jpg)">
