--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -9,7 +9,7 @@
 <div id="pullrefresh" class="mui-scroll-wrapper bs-bg-white" ms-controller="hotel" ms-on-swipeup="vmTop.su" ms-on-swipedown="vmTop.sd">
     <div class="mui-scroll">
         <div style="position: absolute;top: 40vh;z-index: 10;right: 0;padding-right: 10px;">
-            <button type="button" class="calender-icon bs-bg-red" ms-css-background-image="type?'url(img/clock.png)':'url(img/calendar.svg)'" ms-on-tap="openTimePanel">
+            <button type="button" class="calender-icon bs-bg-red" ms-css-background-image="type?'url(img/icon/clock-white.svg)':'url(img/icon/calendar-white.svg)'" ms-on-tap="openTimePanel">
             <div class="bs-text-white bs-text-smaller" ms-if="!type" style="line-height: 46px;">{{getToday('day')}}</div>
             </button>
         </div>
