--- a/js/pages/checkin/opendoor.html
+++ b/js/pages/checkin/opendoor.html
@@ -14,7 +14,7 @@
         padding: 20px;
         position: relative;
         border-radius: 2px;
-        background: url("../img/icon/icon-lock.svg") no-repeat center;
+        background: url("../img/icon/icon-xiangyoukaisuo.svg") no-repeat center;
         overflow: hidden;
         text-align: center;
         height: 60px;
