--- a/js/pages/index/index2.html
+++ b/js/pages/index/index2.html
@@ -1,6 +1,8 @@
 <style>
     .index-top {
-        background: url('/img/qietu-shouyebgr.png');
+        /*background: url('/img/qietu-shouyebgr.png');*/
+        background-image: -webkit-linear-gradient(45deg, #169488, #006457);
+        background-image: linear-gradient(45deg, #169488, #006457);
         height: 280px;
         background-size: cover;
         position: relative;
@@ -26,16 +28,22 @@
         color: white;
         height: 50px !important;
         font-size: 18px !important;
+        border-radius: 34px !important;
     }
 
     .mui-search .mui-placeholder {
         height: 50px !important;
         font-size: 18px !important;
         line-height: 50px;
+        color: #ffffff;
     }
 
     .mui-search {
         margin-top: 12px !important;
+    }
+
+    .mui-icon {
+        color: white !important;
     }
 
     .city-list {
@@ -108,6 +116,10 @@
         left: 10px;
         font-size: 12px;
         color: #ffffff;
+    }
+
+    .mui-table-view:after, .mui-table-view:before {
+        height: 0px !important;
     }
 
     .nav-ico {
