--- a/js/pages/checkout/checkOut.html
+++ b/js/pages/checkout/checkOut.html
@@ -24,7 +24,7 @@
 	margin: 5% 30px 0 30px;
 }
 .title-margin2{
-	margin: 5.5% 5% 0 0;
+	margin: 5.5% 30px 0 0;
 }
 .titl-bold{
 	font-weight: bold;
@@ -52,7 +52,7 @@
 		<div style="padding: 5px 0 5px 0;" >
 			<div class="bs-text-large" ms-repeat="list">
 				<div class="title-margin1 titl-bold" style="font-family: '微软雅黑';font-size: 18px;color: #444444;">{{el.name}}</div>
-				<div style="margin-top: 10px;display: flex;justify-content: space-between;margin-left: 30px;margin-right: 5%;">
+				<div style="margin-top: 10px;display: flex;justify-content: space-between;margin-left: 30px;margin-right: 30px;">
 					<div class="bs-text-normal" ms-repeat="el.typeList" style="color: #444444;">{{el.typeName}}:{{el.number}}</div>
 				</div>
 				<div class="title-margin1 bs-text-smaller" style="margin-top: 8px;color: #444444;font-family: '微软雅黑';">本宿建议：{{el.suggest}}</div>
@@ -61,7 +61,7 @@
 			<div>
 				<div class="title-margin1 titl-bold" style="font-style: 20px;color: #444444;font-family: '微软雅黑';">D&K健康建议 </div>
 				<div class="title-margin1" style="font-size: 14px;color: #444444;font-family: '微软雅黑';margin-bottom: 28px;">{{remarks}}</div>
-				<img style="position: relative;top: -200px;float: right;right: 10px;" src="/img/qietu-zhang.png" width="100px" height="83px"/>
+				<img style="position: relative;top: -200px;float: right;right: 30px;" src="/img/qietu-zhang.png" width="100px" height="83px"/>
 			</div>
 		</div>
 	</div>
