--- a/js/pages/index/index2.html
+++ b/js/pages/index/index2.html
@@ -46,11 +46,6 @@
         color: white !important;
     }
 
-    .city-list {
-        background-color: white;
-        height: 114px;
-    }
-
     .city-list-item {
         width: 60px;
         height: auto;
@@ -74,12 +69,6 @@
         border-radius: 30px;
         background: #b3dfdb;
         text-align: center;
-    }
-
-    .city-list-location-img {
-        width: 30px;
-        height: 30px;
-        margin: 15px auto;
     }
 
     .mui-active {
@@ -135,30 +124,6 @@
             <div class="mui-input-row mui-search">
                 <input type="search" class="mui-input-clear index-top-search" placeholder="搜索">
             </div>
-        </div>
-    </div>
-    <div class="city-list" style="display: none">
-        <div class="city-list-item" style="margin-left: 10px !important;">
-            <div class="city-list-location">
-                <img src="/img/icon/icon-dingwei1.svg" class="city-list-location-img">
-            </div>
-            <span class="city-list-item-txt" style="margin-top: 5px">附近</span>
-        </div>
-        <div class="city-list-item">
-            <img src="/img/qietu-shanghai.png" class="city-list-location">
-            <label class="city-list-item-txt">上海</label>
-        </div>
-        <div class="city-list-item">
-            <img src="/img/qietu-hangzhou.png" class="city-list-location">
-            <label class="city-list-item-txt">杭州</label>
-        </div>
-        <div class="city-list-item">
-            <img src="/img/qietu-nanjing.png" class="city-list-location">
-            <label class="city-list-item-txt">南京</label>
-        </div>
-        <div class="city-list-item">
-            <img src="/img/qietu-suzhou.png" class="city-list-location">
-            <label class="city-list-item-txt">苏州</label>
         </div>
     </div>
 
@@ -221,7 +186,7 @@
 
     <nav class="mui-bar mui-bar-tab" style="background: white !important;">
         <a class="mui-tab-item mui-active" href="#tabbar">
-            <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
+            <span class="mui-icon"><img src="/img/icon/icon-home-select.svg" class="nav-ico"></span>
             <span class="mui-tab-label">首页</span>
         </a>
         <a class="mui-tab-item" href="#tabbar-with-chat">
