--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -1,79 +1,80 @@
 <style>
-    .mui-content, body {
-        background: white !important;
-    }
+.mui-content,
+body {
+    background: white !important;
+}
 
-    .mui-slider-title {
-        color: white !important;
-    }
+.mui-slider-title {
+    color: white !important;
+}
 
-    .switch-button {
-        margin: 16px 20px 16px 16px;
-    }
+.switch-button {
+    margin: 16px 20px 16px 16px;
+}
 
-    .grid-item {
-        height: 130px;
-        background: #006457 !important;
-    }
+.grid-item {
+    height: 130px;
+    background: #006457 !important;
+}
 
-    .intro-title {
-        margin-top: 16px;
-        font-size: 16px;
-        color: #444444;
-        font-family: "Microsoft Yahei";
-        padding: 15px 0px 15px 10px;
-        font-weight: bold;
-        background: white;
-    }
+.intro-title {
+    margin-top: 16px;
+    font-size: 16px;
+    color: #444444;
+    font-family: "Microsoft Yahei";
+    padding: 15px 0px 15px 10px;
+    font-weight: bold;
+    background: white;
+}
 
-    .city-list-item {
-        width: 100px;
-        height: 100px;
-        background: #f2f2f2;
-        line-height: 100% !important;
-        padding: 0 30px !important;
-    }
+.city-list-item {
+    width: 100px;
+    height: 100px;
+    background: #f2f2f2;
+    line-height: 100% !important;
+    padding: 0 30px !important;
+}
 
-    .city-list-item-txt {
-        font-size: 12px;
-        color: #444444;
-    }
+.city-list-item-txt {
+    font-size: 12px;
+    color: #444444;
+}
 
-    .city-list-location {
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        margin-top: 22px;
-        margin-bottom: 10px;
-    }
+.city-list-location {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    margin-top: 22px;
+    margin-bottom: 10px;
+}
 
-    .mui-active {
-        border-bottom: none !important;
-    }
+.mui-active {
+    border-bottom: none !important;
+}
 
-    .service-list-item {
-        width: 173px;
-        height: 120px;
-        background: #f2f2f2;
-        line-height: 100% !important;
-        padding: 0 0 !important;
-    }
+.service-list-item {
+    width: 173px;
+    height: 120px;
+    background: #f2f2f2;
+    line-height: 100% !important;
+    padding: 0 0 !important;
+}
 
-    .service-list-item-img {
-        width: 173px;
-        height: 120px;
-        text-align: left;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
+.service-list-item-img {
+    width: 173px;
+    height: 120px;
+    text-align: left;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-    .service-list-item-txt {
-        font-size: 12px;
-        color: #ffffff;
-        font-family: "Microsoft Yahei";
-        margin-left: 12px;
-        line-height: 30px;
-    }
+.service-list-item-txt {
+    font-size: 12px;
+    color: #ffffff;
+    font-family: "Microsoft Yahei";
+    margin-left: 12px;
+    line-height: 30px;
+}
 </style>
 <ul class="mui-table-view">
     <li class="mui-table-view-cell">
@@ -84,22 +85,21 @@
     </li>
 </ul>
 <ul class="mui-table-view mui-grid-view mui-grid-9" style="border-left: 0px;margin-top: 16px" ms-controller="inroom">
-    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item"
-        style="border-right:1px solid #b3dfdb;border-bottom:1px solid #b3dfdb;">
+    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item" style="border-right:1px solid #b3dfdb;border-bottom:1px solid #b3dfdb;">
         <a href="#" style="margin: 25px auto">
-            <img src="../img/icon/icon-shidu.svg" style="width: 50px;height: 50px"><br>
+            <img src="../img/icon/icon-shidu.svg" style="width: 50px;height: 50px">
+            <br>
             <span style="color: #b3dfdb;font-size: 10px;font-family: 'Microsoft Yahei'">25℃</span>
         </a>
     </li>
-    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item"
-        style="border-right:0px solid #b3dfdb;border-bottom:1px solid #b3dfdb;">
+    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item" style="border-right:0px solid #b3dfdb;border-bottom:1px solid #b3dfdb;">
         <a href="#" style="margin: 25px auto">
-            <img src="../img/icon/icon-kongtiao.svg" style="width: 50px;height: 50px"><br>
+            <img src="../img/icon/icon-kongtiao.svg" style="width: 50px;height: 50px">
+            <br>
             <span style="color: #b3dfdb;font-size: 10px;font-family: 'Microsoft Yahei'">35% RH</span>
         </a>
     </li>
-    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item"
-        style="border-right:1px solid #b3dfdb;border-bottom:0px solid #b3dfdb;">
+    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item" style="border-right:1px solid #b3dfdb;border-bottom:0px solid #b3dfdb;">
         <a href="#" style="margin: 3px auto">
             <div style="height: 68px;width: 68px;border: 1px solid #fcc02f;border-radius: 68px;margin: 0px auto;display: table" ms-on-tap="goOpendoor">
                 <span style="display:table-cell;vertical-align: middle;color: #fcc02f;font-size: 12px;font-family: 'Microsoft Yahei';">点击开门</span>
@@ -109,8 +109,7 @@
             </div>
         </a>
     </li>
-    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item"
-        style="border-right:0px solid #b3dfdb;border-bottom:0px solid #b3dfdb;">
+    <li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6 grid-item" style="border-right:0px solid #b3dfdb;border-bottom:0px solid #b3dfdb;">
         <a style="margin: 3px auto">
             <div style="height: 68px;width: 68px;border: 1px solid #fcc02f;border-radius: 68px;margin: 0px auto;display: table" ms-on-tap="goCheckout">
                 <span style="display:table-cell;vertical-align: middle;color: #fcc02f;font-size: 12px;font-family: 'Microsoft Yahei';">点击退房</span>
@@ -124,9 +123,7 @@
 <div class="intro-title">
     <span>为您介绍</span>
 </div>
-
-<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted"
-     style="height: 114px;background: white">
+<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" style="height: 114px;background: white">
     <div class="mui-scroll">
         <a class="mui-control-item city-list-item" style="margin-left: 10px !important;">
             <div><img src="../img/icon/icon-yingshi.svg" class="city-list-location"></div>
@@ -142,13 +139,10 @@
         </a>
     </div>
 </div>
-
 <div class="intro-title">
     <span>服务预约</span>
 </div>
-
-<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted"
-     style="height: 120px;background: white">
+<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" style="height: 120px;background: white">
     <div class="mui-scroll">
         <a class="mui-control-item service-list-item" style="margin-left: 10px !important;">
             <div class="service-list-item-img" style="background: url('../img/qietu-zaocan.png');">
@@ -167,13 +161,10 @@
         </a>
     </div>
 </div>
-
 <div class="intro-title">
     <span>周边推荐</span>
 </div>
-
-<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted"
-     style="height: 120px;background: white;margin-bottom: 80px">
+<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" style="height: 180px;background: white;">
     <div class="mui-scroll">
         <a class="mui-control-item service-list-item" style="margin-left: 10px !important;">
             <div class="service-list-item-img" style="background: url('../img/qietu-yeshengdongwuyuan.png');">
@@ -191,7 +182,9 @@
             </div>
         </a>
     </div>
-    <nav class="mui-bar mui-bar-tab" style="background: white !important;" ms-controller="inroom">
+    <div style="height: 50px;">
+    </div>
+    <nav class="mui-bar mui-bar-tab" style="background: white !important;z-index: 999;" ms-controller="inroom">
         <a class="mui-tab-item" ms-on-tap="goIndex2">
             <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
             <span class="mui-tab-label">首页</span>
@@ -210,4 +203,3 @@
         </a>
     </nav>
 </div>
-  
